fix header name alignment

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -20,7 +20,9 @@
 
 // Element: Logo/branding
 .header__logo {
-    top: 0;
+    margin-top: 2px;
+    padding: 15px 0;
+    position: relative;
     font-size: 28px;
     font-weight: 100;
 }
